<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_nav"
        layout="@layout/include_nav" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2.0"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/user_feedback_contact"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/user_feedback_contact_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/optional"
            android:inputType="textAutoComplete"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/user_feedback_content"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/user_feedback_content_et"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:gravity="left"
            android:hint="@string/required"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>