<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/white_backgroud"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/tittle_bar_rlt"
        android:layout_width="fill_parent"
        android:background="@color/base_blue"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/text_status"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_main_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/flow_query"
            android:textColor="@color/color_tittle_text"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/down_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/tv_main_tittle"
            android:src="@drawable/down_arrow" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/tv_refresh"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="invisible" />

            <com.kinth.mmspeed.ui.CircularProgressView
	            android:id="@+id/nav_right_progress"
	            android:layout_width="27dp"
	            android:layout_height="27dp"
	            android:layout_centerInParent="true"
	            android:background="@null"
	            android:contentDescription="@string/contentDescription"
	            android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_below="@+id/tittle_bar_rlt"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/llt_popup_4G_exhausted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tittle_bar_rlt"
        android:background="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_4G_exhausted"
            android:layout_width="0dp"
            android:paddingTop="@dimen/dp_5dp"
            android:paddingBottom="@dimen/dp_5dp"
            android:layout_marginLeft="@dimen/dp_8dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:background="@null"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/navigate_arrow_right_pressed" />
    </LinearLayout>

</RelativeLayout>