<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar_bg" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:contentDescription="@string/contentDescription"
            android:onClick="leftBtnOnClick"
            android:src="@drawable/selector_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="邀请成员"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_input_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_border"
                android:gravity="center_vertical"
                android:hint="@string/text_please_input_phone_number"
                android:inputType="phone"
                android:minHeight="50dp"
                android:paddingLeft="@dimen/dp_8dp" />

            <ImageButton
                android:id="@+id/ib_select_contact"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/contact_list_phone_enter_icon"
                android:contentDescription="@string/contentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_receive_sms_from_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_5dp"
            android:paddingRight="@dimen/dp_5dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_blue_color"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</LinearLayout>